<resources>
    <string name="app_name">GUST. eat together </string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_profile">Profile</string>
    <string name="popupmenu_camera">Take Photos With Camera</string>
    <string name="popupmenu_storage">Select Photos From Storage</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem"> </string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Events</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">History Events</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="nicknameTitle">Nickname</string>
    <string name="title_activity_chat">chatActivity</string>
    <string name="birthdayTitle">Birthday</string>
    <string name="hobbiesTitle">Hobbies</string>
    <string name="emailTitle">Email</string>
    <string name="locationTitle">Location</string>
    <string name="phoneTitle">Phone</string>
    <string name="contentDescription">Image Content</string>
    <string name="descriptionHint">Enter your personal description</string>
    <string name="nicknameHint">Enter your nickname</string>
    <string name="locationHint">Enter your location</string>
    <string name="phoneHint">Enter your phone</string>
    <string name="birthdayHint">Enter your birthday</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_create_activity_event">EventActivity</string>
    <string name="title_event_title">Title</string>
    <string name="title_event_date">Date</string>
    <string name="title_event_time">Time</string>
    <string name="title_event_description">Description</string>
    <string name="fragment_event">Event</string>
    <string name="fragment_part">Invitation</string>
    <string name="event_title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="heading_my_top_events">HISTORY</string>
    <string name="title_event_host">Host</string>
    <string name="title_event_topic">Topic</string>
    <string name="title_event_part">Participant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descriptionTitle">Description</string>
    <string name="participants">Participants</string>


</resources>
