<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg5"
    android:gravity="bottom"
    android:paddingBottom="1dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.google.firebase.quickstart.database.SignInActivity">


    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            android:maxLines="1"
            android:textColorHint="@color/cardview_shadow_start_color" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_password"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:textColor="@color/cardview_light_background"
            android:maxLines="1"
            android:textColorHint="@color/cardview_shadow_start_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_password"
        android:layout_centerHorizontal="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sign_in"
            android:textSize="20sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@android:color/transparent"
            android:textColor="@color/cardview_light_background" />


        <Button
            android:id="@+id/button_sign_up"
            android:textSize="20sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@android:color/transparent"
            android:textColor="@color/cardview_light_background" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_buttons"
        android:layout_centerHorizontal="true"
        android:text="Forget Password"
        android:linksClickable="true"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"/>

</RelativeLayout>
