<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.google.firebase.quickstart.database.EventDetailActivity">

    <include
        android:id="@+id/event_author_layout"
        layout="@layout/include_event_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" />

    <include
        android:id="@+id/event_text_layout"
        layout="@layout/include_event_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/event_author_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/details_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/event_text_layout"
        android:layout_marginTop="20dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/dateIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/dateTitle"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/contentDescription"
                    app:srcCompat="@drawable/calendar_blank" />

                <TextView
                    android:id="@+id/dateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/dateEditText"
                    android:layout_alignBottom="@+id/dateEditText"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/dateIcon"
                    android:layout_toRightOf="@+id/dateIcon"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title_event_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#727272" />

                <ImageView
                    android:id="@+id/timeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/dateIcon"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/contentDescription"
                    app:srcCompat="@drawable/av_timer" />

                <TextView
                    android:id="@+id/timeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/timeIcon"
                    android:layout_alignLeft="@+id/dateTitle"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title_event_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#727272"
                     />
                <ImageView
                    android:id="@+id/locationIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/timeIcon"
                    android:layout_marginTop="24dp"
                    app:srcCompat="@drawable/ic_location_on_black" />

                <TextView
                    android:id="@+id/locationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignBottom="@+id/locationIcon"
                    android:layout_alignLeft="@+id/timeTitle"
                    android:text="@string/locationTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#727272" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/comment_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/details_list"
        android:layout_marginTop="20dp"
        android:weightSum="1.0">

        <EditText
            android:id="@+id/field_comment_text"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="Write a comment..."/>

        <Button
            android:id="@+id/button_event_comment"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:text="Event"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_comments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/comment_form"
        tools:listitem="@layout/item_comment" />

</RelativeLayout>