<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="0dp"
    android:background="@drawable/bg3hat"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_profile">
    <!-- android:layout_marginTop="@dimen/activity_horizontal_margin"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:background="@color/colorbar"
        android:alpha="0.85">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/nicknameIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/contentDescription"
                app:srcCompat="@drawable/ic_action_account" />

            <TextView
                android:id="@+id/nicknameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/nicknameEditText"
                android:layout_alignBottom="@+id/nicknameEditText"
                android:layout_toEndOf="@+id/nicknameIcon"
                android:layout_toRightOf="@+id/nicknameIcon"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/nicknameTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />

            <EditText
                android:id="@+id/nicknameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/nicknameTitle"
                android:layout_toRightOf="@+id/nicknameIcon"
                android:enabled="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#121212" />


        </RelativeLayout>

        <include layout="@layout/item_divider" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/phoneIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/ic_phone_black" />

            <TextView
                android:id="@+id/phoneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/phoneIcon"
                android:layout_toRightOf="@+id/phoneIcon"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272"
                android:text="Phone" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@+id/phoneTitle"
                android:layout_toRightOf="@+id/phoneTitle"
                android:enabled="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />



        </RelativeLayout>


        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/ic_location_on_black" />


            <TextView
                android:id="@+id/locationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/locationIcon"
                android:layout_toRightOf="@+id/locationIcon"
                android:text="Area"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />

            <EditText
                android:id="@+id/locationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/locationTitle"
                android:layout_toRightOf="@+id/locationTitle"
                android:enabled="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />


        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/ic_email_black" />

            <TextView
                android:id="@+id/emailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/emailIcon"
                android:layout_toRightOf="@id/emailIcon"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/birthdayTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />

            <EditText
                android:id="@+id/birthdayEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/emailTitle"
                android:layout_toRightOf="@+id/emailTitle"
                android:enabled="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:alpha="0.8">

            <ImageView
                android:id="@+id/hobbiesIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/ic_favorite_black" />

            <TextView
                android:id="@+id/hobbiesTitle"
                android:layout_toEndOf="@+id/hobbiesIcon"
                android:layout_toRightOf="@+id/hobbiesIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/hobbiesTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />
        </RelativeLayout>

        <co.lujun.androidtagview.TagContainerLayout
            android:id="@+id/tagcontainerLayoutProfile"
            android:layout_below="@+id/hobbiesIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:paddingLeft="60dp"
            app:container_border_color="@color/transparent"
            app:container_background_color="@color/transparent"
            app:container_enable_drag="true"
            app:horizontal_interval="10dp"
            app:vertical_interval="10dp"
            app:tag_clickable="true"
            app:tag_theme="random"
            app:tag_ripple_duration="2000"
            app:tag_ripple_alpha="47"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <EditText
                android:id="@+id/tagEditTextProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:singleLine="true"
                android:hint="Enter one hobby"/>

            <Button
                android:id="@+id/addTagButtonProfile"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorbar"
                android:text="ADD" />
        </LinearLayout>

        <include layout="@layout/item_divider" />
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
